# pyrova

./: Makefile  README.md  pyproject.toml  requirements.txt
pyrova/: __init__.py
pyrova/core/: __init__.py  design.py  io.py
pyrova/evaluation/: __init__.py  metrics.py  pool.py  visualize.py
pyrova/experiments/: __init__.py  eval_dro_benchmarks.py  exp001_sensitivity.py  exp003_mean_cvar_correlation.py  exp004_tail_sample_sweep.py  exp005_structured_workload.py  exp006_real_traces.py  exp007_structured_dro.py  exp008_correlation_threshold.py  exp009_boom_real_traces.py  exp010_blend_objective.py  exp011_imbalanced_weighting.py  exp012_boom_powered_splits.py  exp013_optimizer_confound.py  exp014_dro_exact_retrial.py  exp015_equalized_optimizer.py  exp016_robustness_sweeps.py  exp017_dro_scaleup.py  exp018_hotspot_crosscheck.py  exp018b_matched_grid.py  exp019_strong_baseline.py  exp020_grid_convergence.py  exp021_boom_resolution.py  exp022_grid_jitter.py  exp023_favorable_regime.py  exp024_dro_transfer.py  exp025_kraken_soc.py  exp026_terapool.py  exp027_constrained_payoff.py  exp028_budget_ladder.py  exp028b_floorplan2.py  exp029_boom_constrained.py  exp030_matched_hpwl.py  exp031_e1_legalized.py  exp032_headline_robustness.py  exp033_headline_hardening.py  exp034_noracle_ladder.py  exp036_variance_objective.py  exp038_ami33_constrained.py  exp039_reversal_transfer.py  (+10 more)
pyrova/exporters/: __init__.py  def_exporter.py  flp_exporter.py
pyrova/objectives/: __init__.py  density.py  dro.py  overlap.py  thermal.py  wirelength.py
pyrova/optimizer/: __init__.py  (+2 more)
(+84 files in other folders)
